<resources>
    <string name="app_name">MobileOS</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_nome_aplicativo">Gestão de Serviços</string>
    <string name="app_versao">Versão</string>
    <string name="app_titulo">Titulo da Aplicação</string>
    <string name="app_subtitulo">Subtitulo da Aplicação</string>
    <string name="app_novo">Novo</string>
    <string name="app_salvar">Salvar</string>
    <string name="app_voltar">Voltar</string>
    <string name="app_ok">OK</string>
    <string name="app_cancelar">Cancelar</string>
    <string name="app_refresh">Refresh</string>
    <string name="app_localizar">Localizar</string>
    <string name="app_excluir">Excluir</string>
    <string name="app_sim">Sim</string>
    <string name="app_nao">Não</string>
    <string name="app_titulo_lista_template">Lista</string>
    <string name="app_template_manter">Campo</string>
    <string name="app_template_titulo">Titulo</string>
    <string name="app_template_subtitulo">Subtitulo</string>
    <string name="app_confirmacao">Confirmação</string>
    <string name="app_informacao">Informação</string>
    <string name="app_aviso">Aviso</string>
    <string name="app_confirma_exclusao">Você deseja realmente excluir esse registro?</string>
    <string name="app_aguarde">Aguarde</string>
    <string name="app_usuario">Usuário</string>
    <string name="app_password">Senha</string>
    <string name="app_salvar_usuario">Salvar <b>Usuário</b></string>
    <string name="app_login">Login</string>
    <string name="app_sair">Sair</string>
    <string name="app_usuario_senha_invalido">Usuário ou senha inválido.</string>
    <string name="app_menu_principal">Menu Principal</string>
    <string name="app_carregando_usuario">Carregando Usuários</string>
    <string name="app_carregando_irregularidade_tipo">Carregando Tipo de Irregularidades</string>
    <string name="app_sem_conexao">Não foi possível conectar à rede. Tente novamente.</string>
    <string name="app_configuracao">Configuração</string>
    <string name="app_checklist">Checklist</string>
    <string name="app_ocorrencias">Ocorrências</string>
    <string name="app_ordem_servico">Ordem de Serviço</string>
    <string name="app_dados_rede">Dados da Rede</string>
    <string name="app_ra">RA</string>
    <string name="app_os">OS</string>
    <string name="app_data_geracao_os">Data Geração OS</string>
    <string name="app_logradouro">Logradouro</string>
    <string name="app_bairro">Bairro</string>
    <string name="app_numero_imovel">No. Imóvel</string>
    <string name="app_data_encerramento">Data Encerramento</string>
    <string name="app_hora">Hora</string>
    <string name="app_zona">Zona</string>
    <string name="app_quadra">Quadra</string>
    <string name="app_lote">Lote</string>
    <string name="app_numero_ra">No. RA</string>
    <string name="app_numero_hidrometro">No. Hidrômetro</string>
    <string name="app_listagem">Listagem</string>
    <string name="app_nome_foto">Nome da Foto</string>
    <string name="app_descricao">Descrição</string>
    <string name="lbl_ordem_servico">Ordem Serviço</string>
    <string name="lbl_encerrar">Encerrar</string>
    <string name="lbl_vala">Vala</string>
    <string name="lbl_material">Material</string>
    <string name="lbl_observacao_ra">Observação RA</string>
    <string name="lbl_observacao_os">Observação OS</string>
    <string name="lbl_observacao_equipe">Observação da Equipe</string>
    <string name="lbl_numero_ra">No. RA</string>
    <string name="lbl_local_ocorrencia">Local da Ocorrência</string>
    <string name="lbl_logradouro">Logradouro</string>
    <string name="lbl_bairro">Bairro</string>
    <string name="lbl_numero_imovel">No. Imóvel</string>
    <string name="lbl_zona">Zona</string>
    <string name="lbl_quadra">Quadra</string>
    <string name="lbl_lote">Lote</string>
    <string name="lbl_numero_hidrometro">No. Medidor</string>
    <string name="lbl_dados_cliente">Dados do cliente</string>
    <string name="lbl_codigo">Código</string>
    <string name="lbl_numero_matricula">Matrícula</string>
    <string name="lbl_nome_cliente">Nome do cliente</string>
    <string name="lbl_servico">Serviço</string>
    <string name="lbl_servico_executado">Serviço Executado</string>
    <string name="lbl_dados_ordem_servico">Dados da Ordem de Serviço</string>
    <string name="selecione_um_item">Selecione um item</string>
    <string name="lbl_label">Lorem ipsum dolor sit amet</string>
    <string name="lbl_no_os">No. OS</string>
    <string name="lbl_no_hidrometro">No. Hidrômetro</string>
    <string name="lbl_data_instalacao">Data Instalação</string>
    <string name="lbl_data">Data</string>
    <string name="lbl_data_geracao">Data Geração</string>
    <string name="lbl_hora">Hora</string>
    <string name="lbl_hora_instalacao">Hora Instalação</string>
    <string name="lbl_local_instalacao">Local Instalação</string>
    <string name="lbl_protecao_hidrometro">Proteção do Hidrômetro</string>
    <string name="lbl_tipo_instalacao_hidrometro">Tipo Instalação Hidrômetro</string>
    <string name="lbl_leitura_instalacao">Leitura na Instalação</string>
    <string name="lbl_no_leitura">No. Leitura</string>
    <string name="lbl_no_lacre">No. Lacre</string>
    <string name="lbl_troca_registro">Troca Registro</string>
    <string name="lbl_troca_protecao">Troca Proteção</string>
    <string name="lbl_com_cavalete">Com Cavalete</string>
    <string name="lbl_observacao">Observação</string>
    <string name="lbl_ok">OK</string>
    <string name="lbl_cancelar">Cancelar</string>
    <string name="lbl_sair">Sair</string>
    <string name="lbl_salvar">Salvar</string>
    <string name="lbl_entrar">Entrar</string>
    <string name="lbl_rdt">RDT/Equipe</string>
    <string name="lbl_administracao">Administração</string>
    <string name="lbl_kminicial">KM Inicial</string>
    <string name="lbl_kmafinal">KM Final</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_senha">Senha</string>
    <string name="lbl_tipo_servico">Tipo de Serviço"</string>
    <string name="lbl_logo_administra">Logo Administra</string>
    <string name="lbl_nome_usuario">Nome do usuário</string>
    <string name="lbl_titulo_instalacao_hidrometro">Instalação de Hidrômetro</string>
    <string name="lbl_config_servidor_ftp_titulo">Servidor FTP</string>
    <string name="lbl_config_servidor_ftp_ip">IP</string>
    <string name="lbl_config_servidor_ftp_usuario">Usuário</string>
    <string name="lbl_config_servidor_ftp_senha">Senha</string>
    <string name="lbl_config_servidor_ftp_porta">Porta</string>
    <string name="lbl_config_utilizar_ftp_enviar_arquivos">Utilizar FTP enviar arquivos</string>
    <string name="lbl_config_utilizar_ftp_receber_arquivos">Utilizar FTP receber arquivos</string>
    <string name="lbl_config_utilizar_ftp_enviar_fotos">Enviar Fotos via FTP</string>
    <string name="lbl_config_servidor_web_titulo">Servidor Web</string>
    <string name="lbl_config_servidor_url">URL</string>
    <string name="lbl_config_utilizar_web_enviar_arquivos">Utilizar WEB enviar arquivos</string>
    <string name="lbl_config_utilizar_web_receber_arquivos">Utilizar WEB receber arquivos</string>
    <string name="lbl_config_utilizar_web_enviar_fotos">Enviar Fotos via WEB</string>
    <string name="lbl_config_dispositivo_titulo">Dispositivo</string>
    <string name="lbl_config_dispositivo_nome">Nome</string>
    <string name="lbl_config_dispositivo_dispositivo">Dispositivo</string>
    <string name="lbl_config_dispositivo_empresa">Empresa</string>
    <string name="lbl_config_dispositivo_equipe">Equipe</string>
    <string name="lbl_config_dispositivo_serial">Serial</string>
    <string name="lbl_config_dispositivo_id">ID</string>
    <string name="lbl_config_dispositivo_pasta_download">Pasta download</string>
    <string name="lbl_config_dispositivo_pasta_upload">Pasta upload</string>
    <string name="lbl_config_dispositivo_pasta_image">Pasta image</string>
    <string name="lbl_config_email_titulo">Email</string>
    <string name="lbl_config_email_destinatario">Destinatário</string>
    <string name="lbl_config_email_enviar_apos_exportar">Enviar email após exportar</string>
    <string name="lbl_config_email_enviar_apos_encerrar">Enviar email após encerrar</string>
    <string name="lbl_config_sms_titulo">SMS</string>
    <string name="lbl_config_sms_telefone">Telefone</string>
    <string name="lbl_config_sms_enviar_apos_iniciar">Enviar SMS após iniciar</string>
    <string name="lbl_config_sms_enviar_apos_encerrar">Enviar SMS após encerrar</string>
    <string name="lbl_config_geral_titulo">Geral</string>
    <string name="lbl_config_geral_logomarca">Logomarca</string>
    <string name="lbl_config_geral_enviar_apos_exportacao">Enviar arquivos após exportação</string>
    <string name="lbl_config_geral_execucao_os_paralelo">Execução de OS em paralelo</string>
    <string name="lbl_config_geral_exige_checklist">Exige Checklist</string>
    <string name="lbl_config_geral_exige_inicio_atividade">Exige Início Atividade</string>
    <string name="lbl_material_utilizado_titulo">Material Utilizado</string>
    <string name="lbl_material_utilizado_codigo">Codigo Material</string>
    <string name="lbl_material_utilizado_descricao">Material</string>
    <string name="lbl_material_utilizado_quantidade">Quantidade</string>
    <string name="lbl_dados_vala_titulo">Dados da Vala</string>
    <string name="lbl_dados_vala_numero_vala">No. Vala</string>
    <string name="lbl_dados_vala_local_ocorrencia">Local Ocorrência</string>
    <string name="lbl_dados_vala_pavimento">Pavimento</string>
    <string name="lbl_dados_vala_comprimento">Comprimento</string>
    <string name="lbl_dados_vala_largura">Largura</string>
    <string name="lbl_dados_vala_profundidade">Profundidade</string>
    <string name="lbl_dados_vala_indicador_aterro">Falta Aterrar</string>
    <string name="lbl_dados_vala_indicador_entulho">Falta Retirar Entulho</string>
    <string name="lbl_dados_vala_indicador_aterro_equipe">Aterrado pela Equipe</string>
    <string name="lbl_dados_vala_quantidade_bags">Quantidade BAG\'s</string>
    <string name="lbl_dados_os_remanejamento_titulo">Remanejamento</string>
    <string name="lbl_dados_checklist_saida_titulo">Vistória de Veículos - Saída</string>
    <string name="lbl_dados_checklist_retorno_titulo">Vistória de Veículos - Retorno</string>
    <string name="lbl_dados_checklist_matricula">Matricula</string>
    <string name="lbl_dados_checklist_nomecondutor">Nome do Condutor</string>
    <string name="lbl_dados_checklist_cnh">No. CNH</string>
    <string name="lbl_dados_checklist_cr">CR</string>
    <string name="lbl_dados_checklist_setor">Setor</string>
    <string name="lbl_dados_checklist_placa">Placa do Veículo</string>
    <string name="lbl_dados_checklist_data_saida">Data Saída</string>
    <string name="lbl_dados_checklist_hora_saida">Hora Saída</string>
    <string name="lbl_dados_checklist_kmsaida">KM Saída para campo</string>
    <string name="lbl_dados_checklist_data_retorno">Data Retorno</string>
    <string name="lbl_dados_checklist_hora_retorno">Hora Retorno</string>
    <string name="lbl_dados_checklist_kmretorno">KM Retorno</string>
    <string name="lbl_dados_checklist_senha">Senha</string>
    <string name="lbl_interrupcao_inicio_titulo">Ocorrência - Iniciar</string>
    <string name="lbl_interrupcao_fim_titulo">Ocorrência - Finalizar</string>
    <string name="lbl_interrupcao_nome_equipe">Nome da Equipe</string>
    <string name="lbl_interrupcao_matricula">Matrícula</string>
    <string name="lbl_interrupcao_numero_os">No. OS</string>
    <string name="lbl_os_religacao_titulo">Religação</string>
    <string name="lbl_os_corte_titulo">Dados do Corte</string>
    <string name="lbl_os_ligacao_nova_titulo">Ligacao Nova</string>
</resources>