<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="5dp"
    android:paddingBottom="5dp"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    >

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingBottom="8dp"
        android:paddingLeft="5dp"
        android:paddingTop="8dp"
        android:background="@drawable/template_layout_border"
        >

        <TextView
            android:id="@+id/lblTitulo"
            android:text="@string/lbl_interrupcao_numero_os"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            >
        </TextView>

        <TextView
            android:id="@+id/lblSubtitulo1"
            android:text="@string/lbl_dados_vala_numero_vala"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            >
        </TextView>

        <TextView
            android:id="@+id/lblSubtitulo2"
            android:text="@string/lbl_dados_vala_largura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            >
        </TextView>

        <TextView
            android:id="@+id/lblSubtitulo3"
            android:text="@string/lbl_dados_vala_comprimento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            >
        </TextView>

        <TextView
            android:id="@+id/lblSubtitulo4"
            android:text="@string/lbl_dados_vala_profundidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/black"
            >
        </TextView>

    </LinearLayout>

    <ImageButton
        android:id="@+id/btnDelete"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:contentDescription="@string/app_name"
        android:background="@drawable/template_layout_button"
        android:onClick="onDeleteClick"
        android:src="@mipmap/ic_action_remove"
        android:visibility="gone"
        />

</LinearLayout>